# modrinth-rs

./: .gitignore  Cargo.toml  rustfmt.toml
examples/: modrinth_search.ipynb  modrinth_search_iter_async.rs
modrinth/: Cargo.toml
modrinth/examples/: get_search_iter.rs  modrinth_search.ipynb
modrinth/src/: base62.rs  endpoints.rs  lib.rs  query_string.rs
modrinth/src/query/: mod.rs  project.rs  projects.rs  search.rs  versions.rs
modrinth/src/response/: mod.rs  project.rs  search.rs
modrinth/src/types/: mod.rs  project.rs  version.rs
src/: base62.rs  client.rs  endpoints.rs  json_string.rs  lib.rs  serde_with.rs  utils.rs
src/query/: mod.rs
src/request/: mod.rs  pagination.rs  params.rs  query_string.rs  response.rs
src/types/: mod.rs  project.rs  search.rs  version.rs
tests/: modrinth.rs
