[package]
name = "modrinth"
version = "0.1.0"
edition = "2021"
description = "Rust wraper for the Modrinth REST API. Public API subject to change before 1.0.0."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.12"
serde_json = "1.0"
form_urlencoded = "1.0"
surf = "2.3"
futures-core = { version = "0.3", default-features = false }
async-stream = "0.3"
strum = { version = "0.24", features = ["derive"] }
derive_more = "0.99"
chrono = { version = "0.4", features = ["serde"] }
base62 = "1.1"
#thiserror = "1.0"

[dev-dependencies]
smol = "1.2"
