[package]
name = "modrinth"
version = "0.1.0"
edition = "2021"
description = "Rust wraper for the Modrinth REST API. Public API subject to change before 1.0.0."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
base62 = "1.1"

serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_with = "1.12"
serde_json = "1.0"
serde_path_to_error = "0.1"
strum = { version = "0.24", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
isahc = "1.7"
url = "2.2"
serde_qs = "0.9"
thiserror = "1"
futures-lite = "1.12"
async-trait = "0.1"
awaur = "0.1"

[dev-dependencies]
smol = "1.2"
once_cell = "1.12"

[features]
allow-unknown-fields = []
deny-unknown-fields = []
