[package]
name = "modrinth"
version = "0.1.0"
edition = "2021"
description = "Rust wraper for the Modrinth REST API. Public API subject to change before 1.0.0."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
base62 = "2"

serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_with = "1"
serde_json = "1"
serde_path_to_error = "0.1"
strum = { version = "0.24", features = ["derive"] }
time = { version = "0.3", features = ["serde-well-known"] }
isahc = "1"
url = "2"
serde_qs = "0.9"
thiserror = "1"
futures-lite = "1"
async-trait = "0.1"

[dependencies.awaur]
version = "0.1"
features = [
    "paginator",
    "serde-as-wrapper",
    "serde-with-base62",
    "serde-with-json-string"
] 

# [patch.crates-io]
# awaur = { path = "/home/jacob/Documents/github.com/spikespaz/awaur" }

[dev-dependencies]
smol = "1"
once_cell = "1"

[features]
allow-unknown-fields = []
deny-unknown-fields = []
