[package]
name = "modrinth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.12"
serde_json = "1.0"
ureq = { version = "2.4", features = ["json"] }
# url = "2.2"
derive_more = "0.99"
# getset = "0.1"
# chrono = { version = "0.4", features = ["serde"] }
# thiserror = "1.0"

[dev-dependencies]
# test-case = "2.0"
