[package]
name = "modrinth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.12"
serde_json = "1.0"
ureq = { version = "2.4", features = ["json"] }
# url = "2.2"
serde_path_to_error = "0.1"
strum = { version = "0.24", features = ["derive"] }
derive_more = "0.99"
# getset = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# base-62 = "0.1"
base62 = "1.1"
thiserror = "1.0"

[dev-dependencies]
# test-case = "2.0"
